[gd_scene load_steps=21 format=2]

[ext_resource path="res://Source/RangedEnemy/RangedEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy14.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy13.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy15.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy00.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy01.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy03.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy05.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy07.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy08.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy02.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy09.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy11.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy12.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy10.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy04.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/RangedEnemy/RangedEnemy06.png" type="Texture" id=17]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

[node name="RangedEnemy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_mask = 512
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Range" type="Area2D" parent="."]
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
scale = Vector2( 50, 50 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
